--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -104,7 +104,7 @@
     max-height: none;
 }
 
-.comentForm button {
+.comentForm button[type=submit] {
     padding: 1rem 1.5rem;
     margin-top: 1rem;
     border-radius: 8px;
@@ -116,8 +116,13 @@
     transition: background-color 0.2s;
 }
 
-.comentForm button:hover {
+.comentForm button[type=submit]:not(:disabled):hover {
     background: var(--green-300);
+}
+
+.comentForm button[type=submit]:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
 }
 
 .comentList {
